--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,67 @@
 }
 
 /*Fin estilos hero section*/
+
+.card {
+    /* width: 320px;
+    height: 500px; */
+    border-radius: 20px;
+    overflow: hidden;
+    border: 5px solid #009970;
+    position: relative;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card-body {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -100%;
+    position: absolute;
+    background: #1f3d4738;
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 2s;
+}
+
+.card:hover .card-body {
+    right: 0;
+}
+
+.card-title {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.card-text {
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 40px 0;
+    line-height: 25px;
+
+}
+
+.btn {
+    color: #fff;
+    background: #8eb234;
+    padding: 10px 20px;
+    width: 120px;
+    border-radius: 5px;
+    text-transform: capitalize;
+    border: none;
+    outline: none;
+    font-weight: 500;
+}
