--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,34 @@
     border: 0;
     box-sizing: border-box;
 }
+
+.float {
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background: #0df053;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 30px; 
+}
+.float:hover {
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background: green;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 30px; 
+}
+
 /* Inicio Estilos Navbar*/
 .navbar {
     background-color: #8eb234;
@@ -87,8 +115,8 @@
     position: relative;
 }
 
-.hero-section h1 {
-    font-size: 1.5em;
+.hero-section p {
+    font-size: 100px;
 }
 
 .hero-section h2 {
@@ -160,3 +188,44 @@
     outline: none;
     font-weight: 500;
 }
+
+.container-fluid {
+    background-color: #202126;
+    color: #888;
+    font-size: 16px;
+}
+
+h1{
+    font-size: 20px !important;
+    color: #fff;
+    margin-bottom: 30px !important;
+}
+
+.bi {
+    color: white !important;
+}
+
+.img-fluid {
+    width: 92% !important;
+    height: 150px !important;
+}
+
+/* span {
+    display: block;
+    font-family: monospace;
+    font-size: 80px;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 22ch;
+    animation: typing 2s steps(12),
+    blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
+
+@keyframes typing {
+    from { width: 0 }
+}
+
+@keyframes blink {
+    50% { border-color: transparent }
+} */
