--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/*INICIO BTN WHATSAPP*/
 .float {
     position: fixed;
     width: 55px;
@@ -30,6 +31,7 @@
     text-align: center;
     font-size: 30px; 
 }
+ /*FIN BTN WHATSAPP*/
 
 /* Inicio Estilos Navbar*/
 .navbar {
@@ -92,9 +94,10 @@
 }
 /*Fin estilos Navbar*/
 
+
 /*Inicio estilos section hero*/
 .hero-section{
-    background: url(./assets/img/mesa.png) no-repeat center;
+    background: url(./assets/img/jardin_luz.jpeg) no-repeat center;
     background-size: cover;
     width: 100%;
 }
@@ -125,75 +128,76 @@
 
 /*Fin estilos hero section*/
 
+
+/*INICIO CARD ESTILOS*/
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 50px;
+}
 .card {
-    /* width: 320px;
-    height: 500px; */
-    border-radius: 20px;
+    width: 325px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    border: 5px solid #009970;
-    position: relative;
+    transition: transform 0.6s ease;
 }
 
-.card-img-top {
+/* .card {
+    transition: all 0.3s;
+} */
+.card:hover {
+    transform: translateY(-10px);
+}
+
+.card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 10px;
 }
-
 .card-body {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: -100%;
-    position: absolute;
-    background: #1f3d4738;
-    backdrop-filter: blur(5px);
-    border-radius: 15px;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 2s;
-}
-
-.card:hover .card-body {
-    right: 0;
+    padding: 15px;
 }
 
 .card-title {
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
-.card-text {
-    text-transform: capitalize;
-    font-size: 16px;
-    font-weight: 400;
-    margin: 40px 0;
-    line-height: 25px;
-
+.card-body p {
+    font-size: 15px;
+    color: #666;
+    margin-bottom: 20px;
 }
 
 .btn {
+    display: inline-block;
+    background-color:#8eb234;
     color: #fff;
-    background: #8eb234;
-    padding: 10px 20px;
-    width: 120px;
     border-radius: 5px;
-    text-transform: capitalize;
-    border: none;
-    outline: none;
-    font-weight: 500;
+    padding: 8px 16px;
+    border-color: #8eb234;
 }
+.btn:hover {
+    background-color:#8eb234;
+    border-color: #8eb234; 
+}
+
+
+
+/*FIN CARDS ESTILOS*/
+
+/*INICIO ESTILOS FOOTER*/
 
 .container-fluid {
     background-color: #202126;
     color: #888;
     font-size: 16px;
-}
+} 
 
 h1{
     font-size: 20px !important;
@@ -203,29 +207,7 @@ h1{
 
 .bi {
     color: white !important;
+    
 }
 
-.img-fluid {
-    width: 92% !important;
-    height: 150px !important;
-}
-
-/* span {
-    display: block;
-    font-family: monospace;
-    font-size: 80px;
-    white-space: nowrap;
-    border-right: 4px solid;
-    width: 22ch;
-    animation: typing 2s steps(12),
-    blink .5s infinite step-end alternate;
-    overflow: hidden;
-}
-
-@keyframes typing {
-    from { width: 0 }
-}
-
-@keyframes blink {
-    50% { border-color: transparent }
-} */
+/*FIN FOOTER ESTILOS*/
