--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .card {
     width: 325px;
@@ -211,3 +211,27 @@ h1{
 }
 
 /*FIN FOOTER ESTILOS*/
+
+/*INICIO DETALLES DE PRODUCTO*/
+.product-detail {
+    margin-top: 120px;
+    padding-top: 10px;
+    margin-bottom: 30px;
+    background: #202126;
+    color: white;
+    border: solid 1px #8eb234;
+    box-shadow: 0 0 10px 10px #8eb234;
+  }
+  .product-image {
+    max-width: 100%;
+    height: auto;
+  }
+  .product-info {
+    margin-top: 100px;
+    color: white;
+  }
+
+
+
+
+/*FIN DETALLES DE PRODUCTO*/
